[project]
name = "volley-stats"
version = "0.1.0"
description = "Volleyball statistics analysis and AI commentary web app"
requires-python = ">=3.11"

dependencies = [
    # --- Core web server ---
    "flask>=3.0",
    "flask-cors>=4.0",
    "gunicorn>=21.2",

    # --- Data handling ---
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "fuzzywuzzy>=0.18",
    "python-levenshtein>=0.12",

    # --- Excel support ---
    "openpyxl>=3.1",
    "xlrd>=2.0.1",

    # --- Plots & images ---
    "matplotlib>=3.8",
    "seaborn>=0.11",
    "pillow>=10.3",

    # --- Validation / config ---
    "pydantic>=2.6",
    "python-dotenv>=1.0",

    # --- API calls ---
    "requests",
]

[project.optional-dependencies]
llm = [
    "transformers",
    "sentence-transformers",
    "torch",
    "torchaudio",
    "torchvision",
    "accelerate",
    "hf-xet",
]
rag = [
    "faiss-cpu",
    "llama-index",
    "llama-index-llms-huggingface",
    "llama-index-embeddings-huggingface",
    "llama-index-llms-huggingface-api",
]
dev = [
    "pytest",
    "flake8",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "flake8",
]